--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ packages =
 python_requires = >=3.4
 install_requires =
 	watchdog
+	importlib_resources;python_version<"3.7"
 build_requires =
 	setuptools
 	babel
