--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ url = https://github.com/Cimbali/pympress/
 download_url = https://github.com/Cimbali/pympress/releases/latest
 project_urls =
 	Issues = https://github.com/Cimbali/pympress/issues/
-	Documentation = https://cimbali.github.io/pympress/
+	Documentation = https://pympress.github.io/
 	Source Code = https://github.com/Cimbali/pympress/
 license = GPL-2.0-or-later
 license_files = LICENSE.txt
