--- a/setup.cfg
+++ b/setup.cfg
@@ -94,8 +94,11 @@ exclude =
 	build/
 	dist/
 
-ignore = D107, D200, D210, D413, E251, E302, E303, W504,  # never complain about those
-		 D205, D212, D415, E201, E221, E241, E266, E301, E402, E701, E731  # allow sometimes, e.g. aligning code etc.
+ignore =
+	# never complain about those
+	D107, D200, D210, D413, E251, E302, E303, W504,
+	# allow sometimes, e.g. aligning code etc.
+	D205, D212, D415, E201, E221, E241, E266, E301, E402, E701, E731
 
 per-file-ignores =
 	# do not complain about dummy functions
