Set preferences and menu items for deck overview

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -17,6 +17,10 @@ scroll_number = off
 slide_ratio = 0.75
 next_slide_count = 1
 
+[deck-overview]
+max-slides-per-row = 6
+distinct-labels-only = on
+
 [layout]
 plain = {
 	    "resizeable": true,
@@ -193,6 +197,7 @@ unzoom = u
 notes-mode = n
 annotations = a
 highlight = h
+deck-overview = d
 swap-screens = s
 blank-screen = b
 quit = q
