Make sure to ship well-known-name renamed desktop file in rpm
Rename in 65227b9

--- a/setup.cfg
+++ b/setup.cfg
@@ -166,6 +166,10 @@ preamble =
 	Recommends: ${typelib_recommends}
 	%%endif
 
+install = ${base:install}
+	# Add “well-know” name to files searched
+	find "%%{{buildroot}}%%{{_prefix}}" -wholename "%%{{buildroot}}%%{{python3_sitelib}}" -prune -o -name 'io.github.pympress.*' -printf '%%{{_prefix}}/%%%%P\n' -prune >> INSTALLED_FILES
+
 post = ${base:post}
 	if [ $$1 -gt 1 ]; then
 		# On update, remove directories incorrectly left behind by previous versions
