--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -53,7 +53,7 @@ jobs:
     name: Source RPM
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
 
     - name: Install dependencies
       run: |
@@ -79,7 +79,7 @@ jobs:
       run: |
         ref=${{ github.ref }}
         [ "${ref::10}" = 'refs/tags/' ] && tag=${ref:10} || tag=${{ github.event.inputs.tag }}
-        echo ::set-output name=tag::$tag
+        echo tag=$tag | tee -a $GITHUB_OUTPUT
 
     - name: Create GitHub Release and upload
       uses: softprops/action-gh-release@v1
@@ -94,6 +94,44 @@ jobs:
     - name: Check built RPM with rpmlint
       run: rpmlint srpm/*.src.rpm
 
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: source-rpm
+        path: srpm/*.src.rpm
+
+
+  rpmbuild:
+    name: Build binary RPMs for Source RPM
+    needs: srpm
+    runs-on: ubuntu-latest
+    container: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: "fedora:latest"
+            install: dnf install -y
+          - os: opensuse/tumbleweed
+            install: zypper install -y
+
+    steps:
+    - name: Download from GitHub
+      uses: actions/download-artifact@v3
+      with:
+        name: source-rpm
+        path: .
+
+    - name: Install dependencies
+      # NB. querying requires on a source rpm should give us build requires
+      run: ${{ matrix.install }} `rpm -qR "${{ needs.pypi.outputs.srpm_name }}"`
+
+    - name: Build binary from source spm
+      id: build
+      env:
+        srpm: ${{ needs.pypi.outputs.srpm_name }}
+      run: |
+        rpm -q --qf "dest=`rpm --eval %{_rpmfilename}`\n" "$srpm" | tee -a $GITHUB_OUTPUT
+        rpmbuild -D "_rpmdir ${PWD}" -ra "$srpm"`
 
 
   windows-build:
@@ -111,7 +149,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
@@ -157,8 +195,8 @@ jobs:
           ref=${{ github.ref }}
           [ "${ref::10}" = 'refs/tags/' ] && tag=${ref:10} || tag=${{ github.event.inputs.tag }}
 
-          echo ::set-output name=file::pympress-$tag-${{ matrix.arch }}
-          echo ::set-output name=tag::$tag
+          echo file=pympress-$tag-${{ matrix.arch }} | tee -a $GITHUB_OUTPUT
+          echo tag=$tag | tee -a $GITHUB_OUTPUT
 
       - name: Build installer
         run: python3 setup.py --freeze bdist_msi --target-name ${{ steps.name.outputs.file }}.msi --skip-build
