--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ build_requires =
 
 [options.extras_require]
 build_sphinx =
-	sphinx
+	Sphinx < 6
 	myst-parser
 	sphinxcontrib-napoleon
 	sphinx-rtd-theme
