--- a/.github/workflows/lint_pr.yml
+++ b/.github/workflows/lint_pr.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.7, 3.8, 3.9, '3.10', '3.11']
 
@@ -21,20 +22,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8
-
-    - name: Install dependencies to lint docstrings
-      if: matrix.python-version == 3.9
-      run: |
-        python -m pip install flake8-docstrings
+        python -m pip install flake8 flake8-docstrings
 
     - name: Fetch pull request
-      run: |
-        git fetch origin ${GITHUB_REF%/merge}/head
+      run: git fetch origin ${GITHUB_REF%/merge}/head
 
     - name: Lint changes with flake8
+      shell: bash
+      # Reduced list of ignores, applied on the changed lines only
       run: |
-        # Reduced list of ignores, applied on the changed lines only
-        set -o pipefail
         git diff FETCH_HEAD -U0 | flake8 --diff --count --show-source --statistics --ignore=D107,D200,D210,D413,E251,E302,E303,W504 |
            sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::error file=\1,line=\2,col=\3::/p;g'
