--- a/.github/workflows/lint_push.yml
+++ b/.github/workflows/lint_push.yml
@@ -7,6 +7,7 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.7, 3.8, 3.9, '3.10', '3.11']
 
@@ -20,21 +21,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8
+        python -m pip install flake8 flake8-docstrings
 
     - name: Lint with flake8
+      # Full list of ignores, fail on errors. No Docs errors.
       run: |
-        # Full list of ignores, fail on errors. No Docs errors.
-        set -o pipefail
         flake8 . --count --show-source --statistics --select=E,F,W,C | sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::error file=\1,line=\2,col=\3::/p;g'
-
-    - name: Install dependencies to lint docstrings
-      if: matrix.python-version == 3.9
-      run: |
-        python -m pip install flake8-docstrings
+      shell: bash
 
     - name: Lint docstrings
-      if: matrix.python-version == 3.9
       run: |
-        set -o pipefail
         flake8 . --count --show-source --statistics --select=D | sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::warning file=\1,line=\2,col=\3::/p;g'
+      shell: bash
