Adjust installing of prerequisites further

--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -114,6 +114,7 @@ jobs:
     runs-on: ubuntu-latest
     container: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: "fedora:latest"
@@ -130,7 +131,7 @@ jobs:
 
     - name: Install dependencies
       # NB. querying requires on a source rpm should give us build requires
-      run: ${{ matrix.install }} rpm-build `rpm -qR "${{ needs.srpm.outputs.file }}" | awk '{print $1}'`
+      run: ${{ matrix.install }} rpm-build `rpm -qR "${{ needs.srpm.outputs.file }}" | awk '$1 !~ /^rpmlib(.*)/ {print $1}'`
 
     - name: Build binary from source spm
       id: build
