--- a/.github/workflows/lint_pr.yml
+++ b/.github/workflows/lint_pr.yml
@@ -27,9 +27,18 @@ jobs:
     - name: Fetch pull request
       run: git fetch origin ${GITHUB_REF%/merge}/head
 
+    - name: Lint with standard ignores on modified files
+      shell: bash
+      run: |
+        flake8 . --count --show-source --statistics | sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::error file=\1,line=\2,col=\3::/p;g'
+
     - name: Lint changes with flake8
       shell: bash
       # Reduced list of ignores, applied on the changed lines only
       run: |
-        git diff FETCH_HEAD -U0 | flake8 --diff --count --show-source --statistics --ignore=D107,D200,D210,D413,E251,E302,E303,W504 |
-           sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::error file=\1,line=\2,col=\3::/p;g'
+        git diff -z --name-only FETCH_HEAD -- '**.py' | xargs -r0 flake8 --ignore=D107,D200,D210,D413,E251,E302,E303,W504 > errors
+        git diff FETCH_HEAD -U0 -- '**.py' | sed -rn -e '/^\+\+\+ /{s,^\+\+\+ ./,,;h}' -e '/^@@ /{G;s/^@@ -[0-9,]+ \+([0-9,]+) @@.*\n(.*)/\2,\1/p}' | (
+           while IFS=, read file start lines; do for (( l = start ; l < $start + ${lines:-1}; ++l )); do echo "^$file:$l:"; done; done
+        ) > changed_lines
+        # Invert return value, i.e. error iff matches
+        ! grep -f changed_lines errors | sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::error file=\1,line=\2,col=\3::/p;g'
